2001-04-25  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/Factory.pm (dump_rli): Changed to delete unneeded
	fields only from completely download comics.

2001-04-24  Elliot Glaysher <nuriko.chan@home.com>

	* debian/*: Elliot redesigned Debian packages, and is the new
	maintainer.
	
2001-04-23  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/HTML.pm (create_webpage_set): Fixed use of
	libdate_sort().
	* Makefile (install_pms): added substitution of configurable
	install data in Config.pm

2001-04-23  Elliot Glaysher <nuriko.chan@home.com>

	* netcomics, Netcomics/Config.pm, Netcomics/HTML.pm: HTML.pm now
	uses Ben's nice Config.pm for options, instead of having to set
	everything manually.
	
2001-04-23  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/Config.pm (processARGV): Added require of Util so that
	mkgmtime is accessible.
	* Netcomics/Factory.pm (list_comics): Fixed syntax error with how
	libdate_sort was being called.  Made %hof a class attribute loaded
	only once for all Factory instances.  Fixed max name & title
	string length algorithm.

2001-04-22  Elliot Glaysher <nuriko.chan@home.com>

	* Netcomics/Factory.pm: Fixed bug that caused "Sort subroutine
	didn't return single value at /usr/lib/perl5/Netcomics/Factory.pm
	line 865." on netcomics -l.
	
2001-04-22  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Modularized the rest of netcomics.

2001-04-22  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* netcomics (create_webpage): Made create_webpage not die when
	more than 8 files make up one strip.
	* lib/bastich: Removed because it no longer exists.

2001-04-19  Elliot Glaysher <nuriko.chan@home.com>

	* lib/joyoftech: Added joyoftech, thanks to Max Zomborszki.
	
2001-04-19  Elliot Glaysher <nuriko.chan@home.com>

	* lib/freefall: Added freefall, thanks to Jimmy De Laet, and then 
	Phil Gregory.
	
2001-04-08  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* netcomicsrc: Added supress_rerun_command option